# KaHIP

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog  INSTALL  KaHIP_hu_changes.md  LICENSE  NOTES  README.md  SConscript  SConstruct  cleanup.sh  compile.sh  compile_withcmake.sh  compile_withcmake_lise.sh  pyproject.toml  test_connected_blocks.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  build_nompi.yml  build_windows.yml  publish-to-pypi.yml
app/: balance_configuration.h  buffoon.cpp  configuration.h  edge_evaluator.cpp  evaluator.cpp  fast_node_ordering.cpp  global_multisection.cpp  graphchecker.cpp  ilp_exact.cpp  ilp_improve.cpp  kaffpa.cpp  kaffpaE.cpp  kaffpareps.cpp  label_propagation.cpp  metis_ordering.cpp  node_ordering.cpp  node_separator.cpp  node_separator_ml.cpp  parse_parameters.h  parse_spac_parameters.h  partition_to_vertex_separator.cpp  spac.cpp
cmake/: FindGurobi.cmake
examples/: example_weighted.graph  rgg_n_2_15_s0.bgf  rgg_n_2_15_s0.graph  tiny10.graph  tiny16.graph  tiny22.graph
img/: MGPall_en_new.fig  PEcommTree.ipe
interface/: SConscript  SConstruct  kaHIP_config.h.cmake  kaHIP_interface.cpp  kaHIP_interface.h  kaHIP_interface.h.gch
lib/: definitions.h  kahip.pc.in  version.h
lib/algorithms/: cycle_search.cpp  cycle_search.h  push_relabel.cpp  push_relabel.h  strongly_connected_components.cpp  strongly_connected_components.h  topological_sort.cpp  topological_sort.h
lib/community_detection/: VieClus_adapter.cpp  VieClus_adapter.h
lib/data_structure/: flow_graph.h  graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h  union_find.h
lib/ilp_improve/: ilp_exact.h  ilp_helpers.h  ilp_improve.h
lib/io/: graph_io.cpp  graph_io.h  mmap_graph_io.h
lib/mapping/: communication_graph_search_space.cpp  communication_graph_search_space.h  construct_distance_matrix.cpp  construct_distance_matrix.h  construct_mapping.cpp  construct_mapping.h  fast_construct_mapping.cpp  fast_construct_mapping.h  full_search_space.cpp  full_search_space.h  full_search_space_pruned.cpp  full_search_space_pruned.h  local_search_mapping.cpp  local_search_mapping.h  mapping_algorithms.cpp  mapping_algorithms.h
lib/node_ordering/: min_degree_ordering.cpp  min_degree_ordering.h  nested_dissection.cpp  nested_dissection.h  ordering_tools.cpp  ordering_tools.h  reductions.cpp  reductions.h
lib/parallel_mh/: diversifyer.h  parallel_mh_async.cpp  parallel_mh_async.h  population.cpp  (+1 more)
misc/: cpp.vim  omp.h
misc/example_parhip_call/: CMakeLists.txt  parhip_test.cpp
parallel/: build.sh  cleanup.sh
parallel/parallel_src/: .sconsign.dblite  CMakeLists.txt  README.md  SConscript  SConstruct  cleanup.sh  compile.sh  compile_all.sh  parhip_interface.pc.in
parallel/parallel_src/app/: configuration.h  dspac.cpp  edge_list_to_metis_graph.cpp  friendster_list_to_metis_graph.cpp  generate_barabasi_albert.cpp  generate_rgg.cpp  graph2binary.cpp  graph2binary_external.cpp  parhip.cpp  parse_dspac_parameters.h  parse_parameters.h  readbgf.cpp  toolbox.cpp
parallel/parallel_src/interface/: .sconsign.dblite  SConscript  SConstruct  parhip_interface.cpp  parhip_interface.h
parallel/parallel_src/lib/: definitions.h  partition_config.h  pdefinitions.h  ppartition_config.h
parallel/parallel_src/lib/communication/: dummy_operations.cpp  dummy_operations.h  mpi_tools.cpp  mpi_tools.h
parallel/parallel_src/lib/data_structure/: balance_management.cpp  balance_management.h  balance_management_coarsening.cpp  balance_management_coarsening.h  balance_management_refinement.cpp  balance_management_refinement.h  hashed_graph.h  linear_probing_hashmap.h  linear_probing_hashmap_ll.h  next_prime.h  parallel_graph_access.cpp  parallel_graph_access.h  processor_tree.cpp  processor_tree.h
parallel/parallel_src/lib/distributed_partitioning/: distributed_partitioner.cpp  distributed_partitioner.h  stop_rule.h
parallel/parallel_src/lib/distributed_partitioning/initial_partitioning/: distributed_evolutionary_partitioning.cpp  distributed_evolutionary_partitioning.h  initial_partitioning.cpp  initial_partitioning.h  random_initial_partitioning.cpp  random_initial_partitioning.h
parallel/parallel_src/lib/dspac/: dspac.cpp  dspac.h  edge_balanced_graph_io.cpp  edge_balanced_graph_io.h
parallel/parallel_src/lib/graph_generation/: build_from_edge_list.cpp  build_from_edge_list.h  generate_barabasi_albert.cpp  generate_barabasi_albert.h  generate_kronecker.cpp  generate_kronecker.h  generate_rgg.cpp  generate_rgg.h
parallel/parallel_src/lib/graph_generation/barabasi_albert/: mt-real.c  util_peter.h
parallel/parallel_src/lib/graph_generation/rgg/: error_codes.h  generate_grid.cpp  generate_grid.h  generate_rgg.cpp  generate_rgg.h  geo_utils.h  graph_export.cpp  graph_export.h  graph_io.cpp  graph_io.h  graph_types.h  macros_assertions.h  macros_common.h  shuffle.h  star_list.h  static_distributed_graph.cpp  static_distributed_graph.h  static_local_graph.cpp  static_local_graph.h  static_local_graph_properties.cpp  static_local_graph_properties.h  static_neighbour_vertex_properties.h  statistics.h  timer.h  triple.h  util.cpp  util.h  util_memory.h  util_rand.cpp  util_rand.h
parallel/parallel_src/lib/graph_generation/rgg/protocol/: all_to_all.h  datatype_registry.cpp  datatype_registry.h
parallel/parallel_src/lib/io/: parallel_graph_io.cpp  parallel_graph_io.h  parallel_vector_io.cpp  parallel_vector_io.h
parallel/parallel_src/lib/parallel_contraction_projection/: parallel_block_down_propagation.cpp  parallel_block_down_propagation.h  parallel_contraction.cpp  parallel_contraction.h  parallel_projection.cpp  parallel_projection.h
parallel/parallel_src/lib/parallel_label_compress/: hmap_wrapper.h  node_ordering.cpp  node_ordering.h  parallel_label_compress.h
parallel/parallel_src/lib/tools/: distributed_quality_metrics.cpp  distributed_quality_metrics.h  helpers.h  macros_assertions.h  macros_common.h  random_functions.cpp  random_functions.h  system_info.h  timer.h
parallel/parallel_src/optimized/: generate_ba_pv  parallel_label_compress  yahoo_to_metis
(+359 files in other folders)
